Trying to fix failing tests in TestExecuteStreamCommand