@@ -23,6 +23,7 @@ import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.processors.standard.util.ArgumentUtils;
+import org.apache.nifi.processors.standard.util.JsonUtil;
 import org.apache.nifi.util.LogMessage;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunner;
@@ -92,7 +93,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         byte[] byteArray = outputFlowFile.toByteArray();
         String result = new String(byteArray);
         assertTrue(Pattern.compile("Test was a success\r?\n").matcher(result).find());
@@ -104,7 +105,7 @@ public class TestExecuteStreamCommand {
         assertEquals(expected, attribute.substring(attribute.length() - expected.length()));
         outputFlowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
 
-        MockFlowFile originalFlowFile = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP).get(0);
+        MockFlowFile originalFlowFile = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP).getFirst();
         assertEquals(outputFlowFile.getAttribute("execution.status"), originalFlowFile.getAttribute("execution.status"));
         assertEquals(outputFlowFile.getAttribute("execution.command"), originalFlowFile.getAttribute("execution.command"));
         assertEquals(outputFlowFile.getAttribute("execution.command.args"), originalFlowFile.getAttribute("execution.command.args"));
@@ -137,7 +138,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         byte[] byteArray = outputFlowFile.toByteArray();
         String result = new String(byteArray);
         assertTrue(Pattern.compile("Test was a success\r?\n").matcher(result).find());
@@ -148,7 +149,7 @@ public class TestExecuteStreamCommand {
         String expected = "src" + File.separator + "test" + File.separator + "resources" + File.separator + "ExecuteCommand" + File.separator + "TestSuccess.jar";
         assertEquals(expected, attribute.substring(attribute.length() - expected.length()));
 
-        MockFlowFile originalFlowFile = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP).get(0);
+        MockFlowFile originalFlowFile = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP).getFirst();
         assertEquals(outputFlowFile.getAttribute("execution.status"), originalFlowFile.getAttribute("execution.status"));
         assertEquals(outputFlowFile.getAttribute("execution.command"), originalFlowFile.getAttribute("execution.command"));
         assertEquals(outputFlowFile.getAttribute("execution.command.args"), originalFlowFile.getAttribute("execution.command.args"));
@@ -170,7 +171,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         controller.assertTransferCount(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP);
-        MockFlowFile flowFile = flowFiles.get(0);
+        MockFlowFile flowFile = flowFiles.getFirst();
         assertEquals(0, flowFile.getSize());
         assertTrue(flowFile.getAttribute("execution.error").contains("Error: Unable to access jarfile"));
         assertTrue(flowFile.isPenalized());
@@ -203,7 +204,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         controller.assertTransferCount(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP);
-        MockFlowFile flowFile = flowFiles.get(0);
+        MockFlowFile flowFile = flowFiles.getFirst();
         assertEquals(0, flowFile.getSize());
         assertTrue(flowFile.getAttribute("execution.error").contains("Error: Unable to access jarfile"));
         assertTrue(flowFile.isPenalized());
@@ -231,7 +232,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
 
         assertTrue(Pattern.compile("nifi-standard-processors:ModifiedResult\r?\n").matcher(result).find());
@@ -271,7 +272,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
 
         assertTrue(Pattern.compile("nifi-standard-processors:ModifiedResult\r?\n").matcher(result).find());
@@ -292,9 +293,11 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        MockFlowFile flowFile = flowFiles.get(0);
+        MockFlowFile flowFile = flowFiles.getFirst();
         assertEquals(0, flowFile.getSize());
-        assertTrue(flowFile.getAttribute("execution.error").contains("ÄÖÜäöüß"));
+        assertTrue(flowFile.getAttribute("execution.error").contains("ÄÖÜäöüß"),
+                "Expected 'execution.error' attribute to contain %s but it did not. Full value of 'execution.error' attribute is %s".formatted(
+                "ÄÖÜäöüß", flowFile.getAttribute("execution.error")));
         assertTrue(flowFile.getAttribute("execution.error").contains("fffffffffffffffffffffffffffffff"));
     }
 
@@ -325,9 +328,11 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        MockFlowFile flowFile = flowFiles.get(0);
+        MockFlowFile flowFile = flowFiles.getFirst();
         assertEquals(0, flowFile.getSize());
-        assertTrue(flowFile.getAttribute("execution.error").contains("ÄÖÜäöüß"));
+        assertTrue(flowFile.getAttribute("execution.error").contains("ÄÖÜäöüß"),
+                "Expected 'execution.error' attribute to contain %s but it did not. Full value of 'execution.error' attribute is %s".formatted(
+                        "ÄÖÜäöüß", flowFile.getAttribute("execution.error")));
         assertTrue(flowFile.getAttribute("execution.error").contains("fffffffffffffffffffffffffffffff"));
     }
 
@@ -346,7 +351,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
 
         final String quotedSeparator = Pattern.quote(File.separator);
@@ -380,7 +385,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
 
         final String quotedSeparator = Pattern.quote(File.separator);
@@ -403,7 +408,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
         assertTrue(Pattern.compile("target:ModifiedResult\r?\n$").matcher(result).find(), "TestIngestAndUpdate.jar should not have received anything to modify");
     }
@@ -436,7 +441,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
         assertTrue(Pattern.compile("target:ModifiedResult\r?\n$").matcher(result).find(), "TestIngestAndUpdate.jar should not have received anything to modify");
     }
@@ -458,7 +463,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
         Set<String> dynamicEnvironmentVariables = new HashSet<>(Arrays.asList(result.split("\r?\n")));
         assertFalse(dynamicEnvironmentVariables.size() < 2, "Should contain at least two environment variables starting with NIFI");
@@ -495,7 +500,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        byte[] byteArray = flowFiles.get(0).toByteArray();
+        byte[] byteArray = flowFiles.getFirst().toByteArray();
         String result = new String(byteArray);
         Set<String> dynamicEnvironmentVariables = new HashSet<>(Arrays.asList(result.split("\r?\n")));
         assertFalse(dynamicEnvironmentVariables.size() < 2, "Should contain at least two environment variables starting with NIFI");
@@ -527,7 +532,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         outputFlowFile.assertContentEquals("");
         outputFlowFile.assertAttributeNotExists(CoreAttributes.MIME_TYPE.key());
         String ouput = outputFlowFile.getAttribute("executeStreamCommand.output");
@@ -576,7 +581,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         outputFlowFile.assertContentEquals("");
         String ouput = outputFlowFile.getAttribute("executeStreamCommand.output");
         assertTrue(ouput.startsWith("Hello"));
@@ -593,7 +598,7 @@ public class TestExecuteStreamCommand {
         Map<String, String> attrs = new HashMap<>();
 
         String json = FileUtils.readFileToString(dummy, StandardCharsets.UTF_8);
-        attrs.put("json.attribute", json);
+        attrs.put("json.attribute", JsonUtil.getExpectedContent(json));
         controller.enqueue("".getBytes(), attrs);
 
         controller.setProperty(ExecuteStreamCommand.ARGUMENTS_STRATEGY, ExecuteStreamCommand.DYNAMIC_PROPERTY_ARGUMENTS_STRATEGY.getValue());
@@ -628,7 +633,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 1);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         String output = new String(outputFlowFile.toByteArray());
         ObjectMapper mapper = new ObjectMapper();
         JsonNode tree1 = mapper.readTree(json);
@@ -654,7 +659,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         String result = outputFlowFile.getAttribute("executeStreamCommand.output");
         outputFlowFile.assertContentEquals(dummy);
         assertTrue(Pattern.compile("Test was a success\r?\n").matcher(result).find());
@@ -694,7 +699,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         String result = outputFlowFile.getAttribute("executeStreamCommand.output");
         outputFlowFile.assertContentEquals(dummy);
         assertTrue(Pattern.compile("Test was a success\r?\n").matcher(result).find());
@@ -724,7 +729,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         outputFlowFile.assertContentEquals("small test".getBytes());
         String result = outputFlowFile.getAttribute("outputDest");
         assertTrue(Pattern.compile("Test was a").matcher(result).find());
@@ -766,7 +771,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.NONZERO_STATUS_RELATIONSHIP, 0);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         outputFlowFile.assertContentEquals("small test".getBytes());
         String result = outputFlowFile.getAttribute("outputDest");
         assertTrue(Pattern.compile("Test was a").matcher(result).find());
@@ -800,7 +805,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("outputDest");
+        String result = flowFiles.getFirst().getAttribute("outputDest");
 
         assertTrue(Pattern.compile("nifi-standard-processors:ModifiedResult\r?\n").matcher(result).find());
     }
@@ -839,7 +844,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("outputDest");
+        String result = flowFiles.getFirst().getAttribute("outputDest");
 
         assertTrue(Pattern.compile("nifi-standard-processors:ModifiedResult\r?\n").matcher(result).find());
     }
@@ -874,8 +879,8 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
 
-        flowFiles.get(0).assertAttributeEquals("execution.status", "0");
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        flowFiles.getFirst().assertAttributeEquals("execution.status", "0");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         assertTrue(Pattern.compile("a{256}").matcher(result).matches());
     }
 
@@ -925,8 +930,8 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.OUTPUT_STREAM_RELATIONSHIP, 0);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
 
-        flowFiles.get(0).assertAttributeEquals("execution.status", "0");
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        flowFiles.getFirst().assertAttributeEquals("execution.status", "0");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         assertTrue(Pattern.compile("a{256}").matcher(result).matches());
     }
 
@@ -945,7 +950,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("streamOutput");
+        String result = flowFiles.getFirst().getAttribute("streamOutput");
 
         final String quotedSeparator = Pattern.quote(File.separator);
         assertTrue(Pattern.compile(quotedSeparator + "nifi-standard-processors" + quotedSeparator + "target:ModifiedResult\r?\n").matcher(result).find());
@@ -978,7 +983,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("streamOutput");
+        String result = flowFiles.getFirst().getAttribute("streamOutput");
 
         final String quotedSeparator = Pattern.quote(File.separator);
         assertTrue(Pattern.compile(quotedSeparator + "nifi-standard-processors" + quotedSeparator + "target:ModifiedResult\r?\n").matcher(result).find());
@@ -1000,7 +1005,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         assertTrue(Pattern.compile("target:ModifiedResult\r?\n?").matcher(result).find(),
                 "TestIngestAndUpdate.jar should not have received anything to modify");
     }
@@ -1033,7 +1038,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         assertTrue(Pattern.compile("target:ModifiedResult\r?\n?").matcher(result).find(),
                 "TestIngestAndUpdate.jar should not have received anything to modify");
     }
@@ -1055,7 +1060,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         Set<String> dynamicEnvironmentVariables = new HashSet<>(Arrays.asList(result.split("\r?\n")));
         assertFalse(dynamicEnvironmentVariables.size() < 2, "Should contain at least two environment variables starting with NIFI");
         assertTrue(dynamicEnvironmentVariables.contains("NIFI_TEST_1=testvalue1"), "NIFI_TEST_1 environment variable is missing");
@@ -1091,7 +1096,7 @@ public class TestExecuteStreamCommand {
         controller.run(1);
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        String result = flowFiles.get(0).getAttribute("executeStreamCommand.output");
+        String result = flowFiles.getFirst().getAttribute("executeStreamCommand.output");
         Set<String> dynamicEnvironmentVariables = new HashSet<>(Arrays.asList(result.split("\r?\n")));
         assertFalse(dynamicEnvironmentVariables.size() < 2, "Should contain at least two environment variables starting with NIFI");
         assertTrue(dynamicEnvironmentVariables.contains("NIFI_TEST_1=testvalue1"), "NIFI_TEST_1 environment variable is missing");
@@ -1099,7 +1104,7 @@ public class TestExecuteStreamCommand {
     }
 
     @Test
-    public void testQuotedArguments() throws Exception {
+    public void testQuotedArguments() {
         List<String> args = ArgumentUtils.splitArgs("echo -n \"arg1 arg2 arg3\"", ' ');
         assertEquals(3, args.size());
         args = ArgumentUtils.splitArgs("echo;-n;\"arg1 arg2 arg3\"", ';');
@@ -1107,7 +1112,7 @@ public class TestExecuteStreamCommand {
     }
 
     @Test
-    public void testInvalidDelimiter() throws Exception {
+    public void testInvalidDelimiter() {
         final TestRunner controller = TestRunners.newTestRunner(ExecuteStreamCommand.class);
         controller.setProperty(ExecuteStreamCommand.EXECUTION_COMMAND, "echo");
         controller.assertValid();
@@ -1134,7 +1139,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         String result = outputFlowFile.getAttribute("executeStreamCommand.output");
         outputFlowFile.assertContentEquals(dummy);
         assertTrue(result.isEmpty()); // java -jar with bad path only prints to standard error not standard out
@@ -1175,7 +1180,7 @@ public class TestExecuteStreamCommand {
         controller.assertTransferCount(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP, 1);
 
         List<MockFlowFile> flowFiles = controller.getFlowFilesForRelationship(ExecuteStreamCommand.ORIGINAL_RELATIONSHIP);
-        MockFlowFile outputFlowFile = flowFiles.get(0);
+        MockFlowFile outputFlowFile = flowFiles.getFirst();
         String result = outputFlowFile.getAttribute("executeStreamCommand.output");
         outputFlowFile.assertContentEquals(dummy);
         assertTrue(result.isEmpty()); // java -jar with bad path only prints to standard error not standard out
